[package]
name = "gluon_btree_map"
version = "0.1.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluon = {version = "0.15.1", features = ["serialization"]}
gluon_codegen = {version = "0.15.1"}
gluon_vm = {version = "0.15.1", features = ["serialization"]}

